Tests/test_output/Surfaces/test_spin_surface.txt
WARNING: package sun.awt.X11 not in java.desktop
WARNING: package sun.awt.X11 not in java.desktop

ERROR: Unrecognized function or variable 'srf'.

Error in test_spin_surface (line 10)
X = srf_noise(srf, 0, 1, 'ones');
              ^^^
Error in run (line 112)
evalin('caller', strcat(scriptStem, ';'));
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

STATUS: FAIL
